Agent - fanuc iSeries/Distribution/30iHSSB/Fwlib32.h


typedef struct odblfno {
    short   datano; 
    short   type;   
    short   data;   
} ODBLFNO;
typedef struct odbtluse {
    short   s_grp;      
    short   dummy;      
    short   e_grp;      
    long    data[5];    
} ODBTLUSE; 
typedef struct iodbtd {
    short   datano;     
    short   type;       
    long    tool_num;   
    long    h_code;     
    long    d_code;     
    long    tool_inf;   
} IODBTD;
typedef struct iodbtd2 {
    short   datano;     
    short   dummy;      
    long    type;       
    long    tool_num;   
    long    h_code;     
    long    d_code;     
    long    tool_inf;   
} IODBTD2;
typedef struct iodbtgi {
    short   s_grp;  
    short   dummy;  
    short   e_grp;  
    struct {
        long    n_tool;         
        long    count_value;    
        long    counter;        
        long    count_type;     
    } data[5];
} IODBTGI;  
typedef struct iodbtgi2 {
    short   s_grp;              
    short   dummy;              
    short   e_grp;              
    long    opt_grpno[5];       
} IODBTGI2;  
typedef struct iodbtgi3 {
    short   s_grp;              
    short   dummy;              
    short   e_grp;              
    long    life_rest[5];       
} IODBTGI3;  
typedef struct iodbtgi4 {
    short   grp_no;             
	long	n_tool;				
	long	count_value;		
	long	counter;			
	long	count_type;			
	long	opt_grpno;			
	long	life_rest;			
} IODBTGI4;
typedef struct idbitd {
    short   datano; 
    short   type;   
    long    data;   
} IDBITD;
typedef struct exgrp {
    long    grp_no;     
    long    opt_grpno;  
} ODBEXGP;
typedef struct  iodbtlmng {
    long T_code;
    long life_count;
    long max_life;
    long rest_life;
    unsigned char  life_stat;
    unsigned char  cust_bits;
    unsigned short tool_info;
    short H_code;
    short D_code;
    long spindle_speed;
    long feedrate;
    short magazine;
    short pot;
    short G_code;
    short W_code;
    short gno;
	short grp;
	short edge;
    short org_magazine;
    short org_pot;
	unsigned char edge_num;
	char reserve_c;
	long reserved[2];
    long custom1;
    long custom2;
    long custom3;
    long custom4;
    long custom5;
    long custom6;
    long custom7;
    long custom8;
    long custom9;
    long custom10;
    long custom11;
    long custom12;
    long custom13;
    long custom14;
    long custom15;
    long custom16;
    long custom17;
    long custom18;
    long custom19;
    long custom20;
} IODBTLMNG;
typedef struct  idbtlm {
    short data_id;
    union {
        unsigned char data1;
        short         data2;
        long          data4;
    } item;
} IDBTLM;
typedef struct  iodbtlmag {
    short magazine;
    short pot;
    short tool_index;
} IODBTLMAG;
typedef struct  iodbtlmag2 {
    short magazine;
    short pot;
} IODBTLMAG2;
typedef struct odbhis {
    unsigned short  s_no;   
    short   type;           
    unsigned short  e_no;   
    union {
        struct {
            short   rec_type;   
            short   alm_grp;    
            short   alm_no;     
            char    axis_no;    
            char    dummy;
        } rec_alm;
        struct {
            short   rec_type;   
            char    key_code;   
            char    pw_flag;    
            char    dummy[4];
        } rec_mdi;
        struct {
            short   rec_type;   
            char    sig_name;   
            char    sig_old;    
            char    sig_new;    
            char    dummy;
            short   sig_no;     
        } rec_sgn;
        struct {
            short   rec_type;   
            char    year;       
            char    month;      
            char    day;        
            char    pw_flag;    
            char    dummy[2];
        } rec_date;
        struct {
            short   rec_type;   
            char    hour;       
            char    minute;     
            char    second;     
            char    pw_flag;    
            char    dummy[2];
        } rec_time;
    } data[10];
} ODBHIS;   
typedef struct odbahis {
    unsigned short  s_no;   
    short   type;           
    unsigned short  e_no;   
    struct {
        short   dummy;
        short   alm_grp;        
        short   alm_no;         
        char    axis_no;        
        char    year;           
        char    month;          
        char    day;            
        char    hour;           
        char    minute;         
        char    second;         
        char    dummy2;
        short   len_msg;        
        char    alm_msg[32];    
    } alm_his[10];
} ODBAHIS;  
typedef struct odbahis3 {
    unsigned short  s_no;   
    unsigned short  e_no;   
    struct {
        short   alm_grp;        
        short   alm_no;         
        short   axis_no;        
        short   year;           
        short   month;          
        short   day;            
        short   hour;           
        short   minute;         
        short   second;         
        short   len_msg;        
        short   pth_no;         
        short   dummy;
        char    alm_msg[32];    
    } alm_his[10];
} ODBAHIS3;  
typedef struct iodbsig {
    short   datano; 
    short   type;   
    struct {
        short   ent_no;     
        short   sig_no;     
        char    sig_name;   
        char    mask_pat;   
    } data[20];
} IODBSIG;  
typedef struct odbsys {
    short   addinfo ;       
    short   max_axis ;      
    char    cnc_type[2] ;   
    char    mt_type[2] ;    
    char    series[4] ;     
    char    version[4] ;    
    char    axes[2] ;       
} ODBSYS ;
typedef struct odbsys {
    short   dummy ;         
    char    max_axis[2] ;   
    char    cnc_type[2] ;   
    char    mt_type[2] ;    
    char    series[4] ;     
    char    version[4] ;    
    char    axes[2] ;       
} ODBSYS ;
typedef struct odbst {
    short dummy[2];     
    short aut;          
    short manual;       
    short run;          
    short edit;         
    short motion;       
    short mstb;         
    short emergency;    
    short write;        
    short labelskip;    
    short alarm;        
    short warning;      
    short battery;      
} ODBST ;
typedef struct odbst {
    short   dummy[2] ;  
    short   aut ;       
    short   run ;       
    short   motion ;    
    short   mstb ;      
    short   emergency ; 
    short   alarm ;     
    short   edit ;      
} ODBST ;
typedef struct odbst {
    short   hdck ;      
    short   tmmode ;    
    short   aut ;       
    short   run ;       
    short   motion ;    
    short   mstb ;      
    short   emergency ; 
    short   alarm ;     
    short   edit ;      
} ODBST ;
typedef struct odbalm {
    short   dummy[2] ;  
    short   data ;      
} ODBALM ;
typedef struct alminfo {
#if MAX_AXIS > 16
    union {
        struct {
            struct {
                long    axis ;
                short   alm_no ;
            } alm[5] ;
            long    data_end ;
        } alm1 ;
        struct {
            struct {
                long    axis ;
                short   alm_no ;
                short   msg_len ;
                char    alm_msg[32] ;
            } alm[5] ;
            long    data_end ;
        }alm2 ;
    } u ;
#else
    union {
        struct {
            struct {
                short   axis ;
                short   alm_no ;
            } alm[5] ;
            short   data_end ;
        } alm1 ;
        struct {
            struct {
                short   axis ;
                short   alm_no ;
                short   msg_len ;
                char    alm_msg[32] ;
            } alm[5] ;
            short   data_end ;
        }alm2 ;
    } u ;
#endif
} ALMINFO ; 
FWLIBAPI short WINAPI cnc_rdmaxgrp( unsigned short, ODBLFNO * ) ;
FWLIBAPI short WINAPI cnc_rdmaxtool( unsigned short, ODBLFNO * ) ;
FWLIBAPI short WINAPI cnc_rdusetlno( unsigned short, short, short, short, ODBTLUSE * ) ;
FWLIBAPI short WINAPI cnc_rd1tlifedata( unsigned short, short, short, IODBTD * ) ;
FWLIBAPI short WINAPI cnc_rd2tlifedata( unsigned short, short, short, IODBTD * ) ;
FWLIBAPI short WINAPI cnc_wr1tlifedata( unsigned short, IODBTD * ) ;
FWLIBAPI short WINAPI cnc_wr2tlifedata( unsigned short, IODBTD * ) ;
FWLIBAPI short WINAPI cnc_rdgrpinfo( unsigned short, short, short, short, IODBTGI * ) ;
FWLIBAPI short WINAPI cnc_rdgrpinfo4( unsigned short, short, short, short, short *, IODBTGI4 * );
FWLIBAPI short WINAPI cnc_wrgrpinfo( unsigned short, short, IODBTGI * ) ;
FWLIBAPI short WINAPI cnc_instlifedt( unsigned short, IDBITD * ) ;
FWLIBAPI short WINAPI cnc_rd1tlifedat2( unsigned short, short, long, IODBTD2 * ) ;
FWLIBAPI short WINAPI cnc_wr1tlifedat2( unsigned short, IODBTD2 * ) ;
FWLIBAPI short WINAPI cnc_rdexchgtgrp( unsigned short, short *, ODBEXGP *);
FWLIBAPI short WINAPI cnc_regtool( unsigned short, short, short *, IODBTLMNG * ) ;
FWLIBAPI short WINAPI cnc_rdtool( unsigned short, short, short *, IODBTLMNG * ) ;
FWLIBAPI short WINAPI cnc_wrtool( unsigned short, short, IODBTLMNG * ) ;
FWLIBAPI short WINAPI cnc_wrtool2( unsigned short, short, IDBTLM * ) ;
FWLIBAPI short WINAPI cnc_regmagazine( unsigned short, short *, IODBTLMAG * ) ;
FWLIBAPI short WINAPI cnc_delmagazine( unsigned short, short *, IODBTLMAG2 * ) ;
FWLIBAPI short WINAPI cnc_rdmagazine( unsigned short, short *, IODBTLMAG * ) ;
FWLIBAPI short WINAPI cnc_rdophistry( unsigned short, unsigned short, unsigned short, unsigned short, ODBHIS * ) ;
FWLIBAPI short WINAPI cnc_rdalmhistry( unsigned short, unsigned short, unsigned short, unsigned short, ODBAHIS * ) ;
FWLIBAPI short WINAPI cnc_rdalmhistry3( unsigned short, unsigned short, unsigned short, unsigned short, ODBAHIS3 * ) ;
FWLIBAPI short WINAPI cnc_rdhissgnl( unsigned short, IODBSIG * ) ;
FWLIBAPI short WINAPI cnc_wrhissgnl( unsigned short, IODBSIG * ) ;
FWLIBAPI short WINAPI cnc_sysinfo( unsigned short, ODBSYS * ) ;
FWLIBAPI short WINAPI cnc_statinfo( unsigned short, ODBST * ) ;
FWLIBAPI short WINAPI cnc_alarm( unsigned short, ODBALM * ) ;
FWLIBAPI short WINAPI cnc_rdalminfo( unsigned short, short, short, short, ALMINFO * ) ;
FWLIBAPI short WINAPI cnc_exaxisname( unsigned short, short, short *, char (*)[MAX_AXISNAME] );
FWLIBAPI short WINAPI cnc_exaxisname2( unsigned short, short, short, short *, char (*)[MAX_AXISNAME] );
FWLIBAPI short WINAPI cnc_rdpm_mcnitem( unsigned short, short, short *, char (*)[62] );
FWLIBAPI short WINAPI cnc_wrpm_mcnitem( unsigned short, short, short, char (*)[62] );
FWLIBAPI short WINAPI cnc_rdpm_cncitem( unsigned short, short, short *, char (*)[62]);